fix align items

--- a/src/interface/components/__button/--default.css
+++ b/src/interface/components/__button/--default.css
@@ -14,7 +14,8 @@
     transition-duration: 0.2s;
     cursor: pointer;
 
-    display: flex;
+	display: flex;
+	align-items: center;
     box-sizing: border-box;
     user-select: none;
 }
